[+] Example app [+] InverseBooleanConverter

--- a/XamlHasErrorsAttached/XamlHasErrorsAttached.csproj
+++ b/XamlHasErrorsAttached/XamlHasErrorsAttached.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="HasErrorsAttached.cs" />
     <Compile Include="HasErrorsInitBehavior.cs" />
+    <Compile Include="InverseBooleanConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
